--- a/Memorama_Project-master/Languages/Resources.resx
+++ b/Memorama_Project-master/Languages/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="btnConfirmar" xml:space="preserve">
+    <value>Confirmar</value>
+  </data>
   <data name="btnEndRegister" xml:space="preserve">
     <value>Registrarte</value>
   </data>
